[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/tower_thumperx64.png" type="Texture" id=1]
[ext_resource path="res://Buildings/Building.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buildings/Thumper.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 96 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 70.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
frame = 1
playing = true

[node name="Node2D" parent="." instance=ExtResource( 2 )]

[node name="Attack Area" type="Area2D" parent="."]

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
shape = SubResource( 9 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="Attack Area" to="." method="_on_Attack_Area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
